remove symbol rule and format